--- a/rf_recon/STA.ipynb
+++ b/rf_recon/STA.ipynb
@@ -234,7 +234,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ms10",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
