--- a/CSD.ipynb
+++ b/CSD.ipynb
@@ -356,7 +356,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ms10",
    "language": "python",
    "name": "python3"
   },
