--- a/rf_recon/STA.ipynb
+++ b/rf_recon/STA.ipynb
@@ -117,6 +117,191 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Windows\\.conda\\envs\\ms10\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spikeinterface as si\n",
+    "import spikeinterface.extractors as se\n",
+    "import spikeinterface.preprocessing as sp\n",
+    "import spikeinterface.widgets as sw\n",
+    "import spikeinterface.exporters as sexp\n",
+    "import mountainsort5 as ms5\n",
+    "nwb_file = r\"F:\\RF_MAPPING\\CnL22\\CnL22_250307_141449\\CnL22_250307_141449sh0.nwb\"\n",
+    "recording = se.NwbRecordingExtractor(str(nwb_file))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style='border:1px solid #ddd; padding:10px;'><strong>NwbRecordingExtractor: 32 channels - 20.0kHz - 1 segments - 74,084,864 samples - 3,704.24s (1.03 hours) - uint16 dtype - 4.42 GiB</strong></div><details style='margin-left: 10px;'>  <summary><strong>Channel IDs</strong></summary><ul>[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+       " 24 25 26 27 28 29 30 31] </details><details style='margin-left: 10px;'>  <summary><strong>Annotations</strong></summary><ul><li> <strong> is_filtered </strong>: False</li></ul> </details><details style='margin-left: 10px;'><summary><strong>Channel Properties</strong></summary><ul><details><summary> <strong> gain_to_uV </strong> </summary>[0.195 0.195 0.195 0.195 0.195 0.195 0.195 0.195 0.195 0.195 0.195 0.195\n",
+       " 0.195 0.195 0.195 0.195 0.195 0.195 0.195 0.195 0.195 0.195 0.195 0.195\n",
+       " 0.195 0.195 0.195 0.195 0.195 0.195 0.195 0.195]</details><details><summary> <strong> offset_to_uV </strong> </summary>[-6389.76 -6389.76 -6389.76 -6389.76 -6389.76 -6389.76 -6389.76 -6389.76\n",
+       " -6389.76 -6389.76 -6389.76 -6389.76 -6389.76 -6389.76 -6389.76 -6389.76\n",
+       " -6389.76 -6389.76 -6389.76 -6389.76 -6389.76 -6389.76 -6389.76 -6389.76\n",
+       " -6389.76 -6389.76 -6389.76 -6389.76 -6389.76 -6389.76 -6389.76 -6389.76]</details><details><summary> <strong> location </strong> </summary>[[ 25. 250.]\n",
+       " [  0. 275.]\n",
+       " [ 25. 275.]\n",
+       " [  0. 300.]\n",
+       " [ 25. 300.]\n",
+       " [  0. 325.]\n",
+       " [ 25. 325.]\n",
+       " [  0. 350.]\n",
+       " [ 25. 350.]\n",
+       " [  0. 375.]\n",
+       " [ 25. 375.]\n",
+       " [  0. 225.]\n",
+       " [ 25. 200.]\n",
+       " [  0. 250.]\n",
+       " [  0.  50.]\n",
+       " [  0.   0.]\n",
+       " [  0.  25.]\n",
+       " [ 25. 225.]\n",
+       " [  0. 200.]\n",
+       " [ 25. 175.]\n",
+       " [  0. 175.]\n",
+       " [ 25. 150.]\n",
+       " [  0. 150.]\n",
+       " [ 25. 125.]\n",
+       " [ 25. 100.]\n",
+       " [ 25.  75.]\n",
+       " [ 25.  50.]\n",
+       " [ 25.  25.]\n",
+       " [ 25.   0.]\n",
+       " [  0. 125.]\n",
+       " [  0. 100.]\n",
+       " [  0.  75.]]</details><details><summary> <strong> group </strong> </summary>['shank0' 'shank0' 'shank0' 'shank0' 'shank0' 'shank0' 'shank0' 'shank0'\n",
+       " 'shank0' 'shank0' 'shank0' 'shank0' 'shank0' 'shank0' 'shank0' 'shank0'\n",
+       " 'shank0' 'shank0' 'shank0' 'shank0' 'shank0' 'shank0' 'shank0' 'shank0'\n",
+       " 'shank0' 'shank0' 'shank0' 'shank0' 'shank0' 'shank0' 'shank0' 'shank0']</details><details><summary> <strong> brain_area </strong> </summary>['V1' 'V1' 'V1' 'V1' 'V1' 'V1' 'V1' 'V1' 'V1' 'V1' 'V1' 'V1' 'V1' 'V1'\n",
+       " 'V1' 'V1' 'V1' 'V1' 'V1' 'V1' 'V1' 'V1' 'V1' 'V1' 'V1' 'V1' 'V1' 'V1'\n",
+       " 'V1' 'V1' 'V1' 'V1']</details><details><summary> <strong> label </strong> </summary>['shank0elec64' 'shank0elec65' 'shank0elec66' 'shank0elec67'\n",
+       " 'shank0elec68' 'shank0elec69' 'shank0elec70' 'shank0elec71'\n",
+       " 'shank0elec72' 'shank0elec73' 'shank0elec74' 'shank0elec75'\n",
+       " 'shank0elec77' 'shank0elec83' 'shank0elec107' 'shank0elec108'\n",
+       " 'shank0elec109' 'shank0elec110' 'shank0elec114' 'shank0elec115'\n",
+       " 'shank0elec116' 'shank0elec117' 'shank0elec118' 'shank0elec119'\n",
+       " 'shank0elec120' 'shank0elec121' 'shank0elec122' 'shank0elec123'\n",
+       " 'shank0elec124' 'shank0elec125' 'shank0elec126' 'shank0elec127']</details><details><summary> <strong> imp </strong> </summary>[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+       " 0. 0. 0. 0. 0. 0. 0. 0.]</details></ul></details>"
+      ],
+      "text/plain": [
+       "NwbRecordingExtractor: 32 channels - 20.0kHz - 1 segments - 74,084,864 samples \n",
+       "                       3,704.24s (1.03 hours) - uint16 dtype - 4.42 GiB\n",
+       "  file_path: F:\\RF_MAPPING\\CnL22\\CnL22_250307_141449\\CnL22_250307_141449sh0.nwb"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recording"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acquisition modules: dict_keys(['DigInSeries', 'ElectricalSeries'])\n",
+      "Processing modules: dict_keys([])\n",
+      "Stimulus modules: dict_keys([])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pynwb import NWBHDF5IO\n",
+    "\n",
+    "# Replace 'your_file.nwb' with the path to your NWB file\n",
+    "nwb_file_path = nwb_file\n",
+    "\n",
+    "# Open the file in read mode\n",
+    "with NWBHDF5IO(nwb_file_path, 'r') as io:\n",
+    "    nwbfile = io.read()\n",
+    "\n",
+    "    # Inspect top-level data categories\n",
+    "    print(\"Acquisition modules:\", nwbfile.acquisition.keys())\n",
+    "    print(\"Processing modules:\", nwbfile.processing.keys())\n",
+    "    print(\"Stimulus modules:\", nwbfile.stimulus.keys())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top-level keys: ['#refs#', 'frequency_parameters', 'recFile', 'tIntan']\n",
+      "DIN_data shape: (74084864, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# At this point, f is closed but DIN_data is stored in memory.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Unable to synchronously open object (invalid identifier type to function)'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m DIN_data \u001b[38;5;241m=\u001b[39m \u001b[43mf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrecFile\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m[:]    \u001b[38;5;66;03m# Get all the data as a NumPy array\u001b[39;00m\n",
+      "File \u001b[1;32mh5py\\\\_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mh5py\\\\_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\Windows\\.conda\\envs\\ms10\\lib\\site-packages\\h5py\\_hl\\group.py:357\u001b[0m, in \u001b[0;36mGroup.__getitem__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    355\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid HDF5 object reference\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    356\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(name, (\u001b[38;5;28mbytes\u001b[39m, \u001b[38;5;28mstr\u001b[39m)):\n\u001b[1;32m--> 357\u001b[0m     oid \u001b[38;5;241m=\u001b[39m \u001b[43mh5o\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_e\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlapl\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_lapl\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    358\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    359\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAccessing a group is done with bytes or str, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    360\u001b[0m                     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnot \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;28mtype\u001b[39m(name)))\n",
+      "File \u001b[1;32mh5py\\\\_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mh5py\\\\_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mh5py\\\\h5o.pyx:241\u001b[0m, in \u001b[0;36mh5py.h5o.open\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Unable to synchronously open object (invalid identifier type to function)'"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -234,7 +419,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ms10",
    "language": "python",
    "name": "python3"
   },
